--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -456,7 +456,8 @@ body.dark .zhifubao, body.dark .wechatpay, body.dark .paypal {
         text-align: left; }
 
 .bookmark-modal .card-block, .bookmark-modal .card-header {
-  padding: .5rem; }
+  padding: .5rem;
+  color: #373a3c; }
 
 .bookmark-modal .card-footer {
   padding: 0 0 .2rem .2rem; }
