--- a/static/app/scss/_bookmark.scss
+++ b/static/app/scss/_bookmark.scss
@@ -41,6 +41,7 @@
   }
   .card-block, .card-header {
     padding: .5rem;
+    color: #373a3c;
   }
   .card-footer {
     padding: 0 0 .2rem .2rem;
