--- a/static/app/resources/css/style.css
+++ b/static/app/resources/css/style.css
@@ -2,7 +2,7 @@ html, body {
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
-  transition: all 350ms ease-in-out; }
+  transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1); }
 
 .fix-break-word, p {
   word-break: break-all;
@@ -122,8 +122,8 @@ html, body {
 /*https://github.com/tobiasahlin/SpinKit*/
 /* spinner */
 .spinner {
-  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-  animation: sk-rotateplane 1.2s infinite ease-in-out; }
+  -webkit-animation: sk-rotateplane 1.2s infinite cubic-bezier(0.4, 0, 0.2, 1);
+  animation: sk-rotateplane 1.2s infinite cubic-bezier(0.4, 0, 0.2, 1); }
 
 @-webkit-keyframes sk-rotateplane {
   0% {
@@ -250,7 +250,7 @@ html, body {
         transition-delay: 950ms; }
   .main-title h5 {
     max-height: 300px;
-    transition: all 250ms ease-in-out;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     overflow: hidden; }
     .main-title h5 .label {
       background-color: #71b7fd; }
