--- a/static/app/scss/_components.scss
+++ b/static/app/scss/_components.scss
@@ -10,8 +10,8 @@
 /*https://github.com/tobiasahlin/SpinKit*/
 /* spinner */
 .spinner {
-  -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
-  animation: sk-rotateplane 1.2s infinite ease-in-out;
+  -webkit-animation: sk-rotateplane 1.2s infinite cubic-bezier(0.4, 0, 0.2, 1);
+  animation: sk-rotateplane 1.2s infinite cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 @-webkit-keyframes sk-rotateplane {
