--- a/static/app/scss/_main.scss
+++ b/static/app/scss/_main.scss
@@ -53,7 +53,7 @@
   }
   h5 {
     max-height: 300px;
-    transition: all 250ms ease-in-out;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
     overflow: hidden;
 
     .label {
