--- a/static/app/scss/style.scss
+++ b/static/app/scss/style.scss
@@ -2,7 +2,7 @@ html, body {
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
   -webkit-font-smoothing: antialiased;
-  transition: all 350ms ease-in-out;
+  transition: all 350ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 @import "util.scss";
 @import "animate.scss";
