--- a/styles/_main-containers.scss
+++ b/styles/_main-containers.scss
@@ -1,4 +1,5 @@
 .main {
+  position: relative;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -133,11 +134,15 @@
       padding-left: 0.8rem;
       color: inherit;
       opacity: 0.5;
+      font-size: 0.8rem;
       a, a:hover, a:link, a:active, a:focus, a:visited {
         color: inherit;
       }
       a:hover {
         text-decoration: underline;
+      }
+      @media screen and (min-width: 800px) {
+        font-size: 1rem;
       }
     }
   }
@@ -236,8 +241,63 @@
     }
     a {
       display: none;
+      color: #70B7FD;
       &.show {
         display: block;
+      }
+    }
+  }
+  .nav-bar{
+    position: absolute;
+    top: -0.55rem;;
+    right: 0;
+    z-index: 10;
+    display: inline-block;
+    transition: all 1s;
+    >*{
+      float: left;
+      display: inline-block;
+      cursor: pointer;
+      margin-right: 0.4rem;
+    }
+    &:last-child{
+      margin-right: 0;
+    }
+    i{
+      width: auto;
+      height: auto;
+      margin: 0 !important;
+      font-size: 2rem;
+      color: #70B7FD;
+      &:hover,&:active{
+        color: #59AAF9;
+      }
+    }
+    .github-corner {
+      margin-top: -0.2rem;
+      i {
+        font-size: 2.3rem;
+      }
+    }
+    @media screen and (min-width: 800px) {
+      i{
+        width: auto;
+        height: 3.4rem;
+        font-size: 3rem;
+      }
+      .github-corner {
+        margin-top: -0.2rem;
+        i {
+          font-size: 3.3rem;
+        }
+      }
+    }
+    $anim-delay: 150ms;
+    $anim-duration: 500ms;
+    @for $i from 1 through 5 {
+      >*:nth-child(#{$i}) {
+        animation-duration: $anim-duration;
+        animation-delay: 500 + $anim-delay*($i - 1);
       }
     }
   }
