build view sourcecode module

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -1,6 +1,5 @@
-@import "spinner";
 @import "logo";
 @import "donate";
 @import "nav-bar";
 @import "notice-links";
-@import "sourcecode";
+@import "source-code";
