--- a/styles/_nav-bar.scss
+++ b/styles/_nav-bar.scss
@@ -30,7 +30,7 @@
       font-size: 2.3rem;
     }
   }
-  @media screen and (min-width: 800px) {
+  @media screen and (min-width: 50rem) {
     i{
       width: auto;
       height: 3.4rem;
