--- a/styles/app.scss
+++ b/styles/app.scss
@@ -1,8 +1,9 @@
 @charset "UTF-8";
 @import 'constants';
 @import 'common';
+@import 'utils';
+@import "animation";
 .app {
-  @import 'utils';
   @import 'components';
   @import 'containers';
 }
