--- a/styles/_main-containers.scss
+++ b/styles/_main-containers.scss
@@ -4,10 +4,10 @@
   align-items: center;
   flex-direction: column;
   padding-bottom: 3rem;
-
   .title {
     text-align: center;
     padding-top: 3rem;
+    padding-bottom: 1rem;
     @media screen and (min-width: 50rem) {
       padding-top: 8rem;
       padding-bottom: 2rem;
