--- a/styles/_main-containers.scss
+++ b/styles/_main-containers.scss
@@ -1,4 +1,5 @@
 .main {
+  $dark-theme: 'body.dark &';
   position: relative;
   display: flex;
   align-items: center;
@@ -6,11 +7,12 @@
   padding-bottom: 3rem;
   .title {
     text-align: center;
-    padding-top: 3rem;
-    padding-bottom: 1rem;
+    margin-top: 6rem;
+    margin-bottom: 2rem;
+    transition: all $anim-default-time $anim-cubic-bezier;
     @media screen and (min-width: 50rem) {
-      padding-top: 8rem;
-      padding-bottom: 2rem;
+      margin-top: 10rem;
+      margin-bottom: 3rem;
     }
 
     a {
@@ -72,6 +74,17 @@
     }
   }
 
+  #{$dark-theme} {
+    .title {
+      margin-top: 3rem;
+      margin-bottom: 1rem;
+      @media screen and (min-width: 50rem) {
+        margin-top: 8rem;
+        margin-bottom: 2rem;
+      }
+    }
+  }
+
   .search-bar {
     padding: 1rem 0;
     width: 100%;
@@ -103,12 +116,6 @@
         box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 0 0 1px rgba(0, 0, 0, 0.08);
       }
 
-      &--dark {
-        &:focus, &:active, &:hover {
-          box-shadow: $box-shadow;
-        }
-      }
-
       input {
         border-radius: 5rem;
         border: 0 !important;
@@ -124,9 +131,12 @@
 
       i {
         opacity: 0.5;
-        font-size: 1.2rem;
+        font-size: 1rem;
         &:hover {
           opacity: 1;
+        }
+        @media screen and (min-width: 50rem) {
+          font-size: 1.2rem;
         }
       }
     }
@@ -143,7 +153,18 @@
         text-decoration: underline;
       }
       @media screen and (min-width: 50rem) {
+        padding-left: 1.4rem;
         font-size: 1rem;
+      }
+    }
+  }
+
+  #{$dark-theme} {
+    .search-bar {
+      &__input {
+        &:focus, &:active, &:hover {
+          box-shadow: $box-shadow;
+        }
       }
     }
   }
@@ -197,3 +218,4 @@
     }
   }
 }
+
