--- a/styles/_notice-links.scss
+++ b/styles/_notice-links.scss
@@ -1,14 +1,15 @@
 .notice-links {
+  $dark-theme: 'body.dark &';
   position: fixed;
   bottom: 0;
   left: 0;
   width: 100%;
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
   padding-top: 0.5rem;
   text-align: center;
   transition: background-color $anim-default-time ease-in-out;
   @at-root {
-    body.dark .notice-links {
+    #{$dark-theme} {
       background: $dark;
     }
   }
