--- a/styles/_main-containers.scss
+++ b/styles/_main-containers.scss
@@ -29,6 +29,7 @@
       font-family: "Dressedless Three", Lato, Roboto, 'Helvetica Neue', Arial, Helvetica, sans-serif;
       text-transform: uppercase;
       font-size: 3.5rem;
+      font-weight: 100;
       @media screen and (min-width: 50rem) {
         font-size: 5rem;
       }
