--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -43,20 +43,21 @@
   hyphens: auto;
 }
 
-.fix-modal {
-  height: 94%;
+.fix-modal.fix-modal.fix-modal.fix-modal {
+  height: 97%;
+  margin: 0 auto;
   overflow: hidden;
   transform: translate3d(0, 0, 0);
   &#{&} > .content {
     padding: 0.4rem;
     margin: 0;
-    height: 90%;
+    height: 91%;
     overflow: scroll;
     -webkit-overflow-scrolling: touch;
   }
 }
 @media (min-width: 50rem) {
-  .fix-modal {
+  .fix-modal.fix-modal.fix-modal.fix-modal {
     height: auto;
     overflow: visible;
     .close.icon {
