add form to search input

--- a/styles/_main-containers.scss
+++ b/styles/_main-containers.scss
@@ -90,6 +90,12 @@
       width: 45rem;
     }
 
+    form {
+      padding: 0;
+      margin: 0;
+      border: 0;
+    }
+
     &__desc {
       opacity: 0.5;
       padding-left: 0.8rem;
