--- a/styles/_utils.scss
+++ b/styles/_utils.scss
@@ -49,7 +49,7 @@
   overflow: hidden;
   transform: translate3d(0, 0, 0);
   &#{&} > .content {
-    padding: 0.4rem;
+    padding: 0.4rem 1rem;
     margin: 0;
     height: 91%;
     overflow: scroll;
@@ -61,8 +61,9 @@
     height: auto;
     overflow: visible;
     .close.icon {
-      top: -2rem;
-      right: -2rem;
+      top: 0.5rem;
+      right: 0.5rem;
+      color: rgba(0,0,0,.87);
     }
     &#{&} > .content {
       height: auto;
