refactor with react hooks

--- a/styles/_components.scss
+++ b/styles/_components.scss
@@ -1,6 +1,4 @@
 @import "logo";
 @import "donate";
-@import "nav-bar";
-@import "notice-links";
+@import "nav-bar-container";
 @import "source-code";
-@import "copybook";
